<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:padding="10dp"
    tools:context="CalculatorActivity">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="166dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CVMale"
        android:layout_width="0dp"
        android:layout_height="170dp"
        app:cardBackgroundColor="@color/button"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="20sp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/CVFemale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:contentDescription="@string/home"
                android:src="@drawable/ic_home"
                app:tint="@color/white">

            </ImageView>

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CVFemale"
        android:layout_width="0dp"
        android:layout_height="170dp"
        app:cardBackgroundColor="@color/card"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CVMale"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/dona"
                app:tint="@color/white"
                android:src="@drawable/ic_dona">

            </ImageView>

            <TextView
                android:id="@+id/tvDona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/dona"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewAltura"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="50sp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CVMale">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical"
                android:text="@string/alcada"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAlcada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical"
                android:text="120cm"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200"
            />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewPes"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="20sp"
        app:cardBackgroundColor="@color/card"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/viewEdat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAltura"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical"
                android:text="@string/pes"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical"
                android:text="60"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnMenosPeso"
                    android:contentDescription="Botón menos peso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_subtract"
                    app:tint="@color/white"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnMasPeso"
                    android:backgroundTint="@color/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="Botón más peso"
                    android:src="@drawable/ic_plus"
                    app:tint="@color/white"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewEdat"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/card"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewPes"
        app:layout_constraintTop_toBottomOf="@+id/viewAltura">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical"
                android:text="@string/edat"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEdat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical"
                android:text="30"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnMenosEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="Botón menos edad"
                    android:src="@drawable/ic_subtract"
                    app:tint="@color/white"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnMasEdad"
                    android:backgroundTint="@color/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="Botón más edad"
                    android:src="@drawable/ic_plus"
                    app:tint="@color/white"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/calcular"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>